tests/errors/test_84.xpp
// Cannot perform a new constructor call on a non class type

fn main() void {
	let x = new i64();
}
